# Blackfyre

./: README.md  pyproject.toml
src/ghidra/Blackfyre/: build.gradle
src/ghidra/Blackfyre/src/main/java/blackfyre/datatypes/ghidra/: GhidraBinaryContext.java
src/ghidra/Blackfyre/src/main/java/blackfyre/protobuf/: BinaryContextOuterClass.java  FunctionContextOuterClass.java  PEHeaderOuterClass.java
src/python/: setup.py
src/python/blackfyre/: common.py
src/python/blackfyre/datatypes/contexts/: binarycontext.py  functioncontext.py
src/python/blackfyre/datatypes/contexts/vex/: vexbbcontext.py  vexbinarycontext.py  vexfunctioncontext.py  vexinstructcontext.py
src/python/blackfyre/datatypes/headers/: header.py  peheader.py
test/: __init__.py  test_generate_bcc_integration.py
utils/: README.md  __init__.py  bcc_generator_config.yaml  extract_binary_from_bcc.py  generate_bcc.py  requirements.txt
