[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "blackfyre"
version = "1.0.2"
description = "Binary analysis framework for extracting and analyzing Binary Context Containers (BCCs)"
authors = [{ name = "Malachi Jones", email = "malachi.jones@jonescyber-ai.com" }]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "pyvex==9.2.78",
    "protobuf==4.25.1",
    "numpy==2.2.6",
    "omegaconf",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/jonescyber-ai/Blackfyre/"

[tool.setuptools]
packages = [
    "blackfyre",
    "blackfyre.datatypes",
    "blackfyre.datatypes.contexts",
    "blackfyre.datatypes.contexts.vex",
    "blackfyre.datatypes.headers",
    "blackfyre.utils",
]

[tool.setuptools.package-dir]
blackfyre = "src/python/blackfyre"
"blackfyre.utils" = "utils"
